--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/admin-assets/app.js": "/admin-assets/app.js",
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js",
+    "/css/style.css": "/css/style.css",
+    "/admin-assets/style.css": "/admin-assets/style.css"
 }
